--- a/book/_config.yml
+++ b/book/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  cryptoeconomics-study
+google_analytics: UA-74179218-2
 
 # Build settings
 markdown: kramdown
