setup framework for ch2 sync scripts and sidebar

--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,8 @@
 		"clean:docs": "rm -r ../docs/sync/*",
 		"sync:getting-started": "node ./scripts/sync-getting-started.js",
 		"sync:ch1": "node ./scripts/sync-ch1.js",
-    "generate": "npm run clean:docs && npm run sync:getting-started && npm run sync:ch1",
+		"sync:ch2": "node ./scripts/sync-ch2.js",
+    "generate": "npm run clean:docs && npm run sync:getting-started && npm run sync:ch1 && npm run sync:ch2",
     "start": "npm run generate && docusaurus-start",
     "build": "npm run generate && docusaurus-build",
     "publish-gh-pages": "docusaurus-publish",
